# budget-forecaster

./: .coveragerc  .custom.dic  .gitignore  .mypy.ini  .pre-commit-config.yaml  .prettierrc  .pylintrc  404.html  CLAUDE.md  LICENSE  README.md  codecov.yml  index.html  issues.md  mkdocs.yml  mypy.ini  setup.cfg  setup.py  sitemap.xml
.claude/: settings.json
.claude/agents/: architect-reviewer.md  code-reviewer.md  python-pro.md
.claude/commands/: add-feature.md  commit.md  create-pr.md  design.md  handle-pr-comments.md  implement.md  lint.md  refactor-check.md  review.md  run-tests.md  test.md
.claude/rules/: auto-introspection.md  design-mockups.md  documentation.md  external-libs.md  git-conventions.md  implementation-workflow.md  imports.md  lint-disables.md  pr-review.md  python-quality.md  quality-docs.md  testing.md  tui-layout.md
.githhub/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: ci.yml  codspeed.yml  docs.yml
budget_forecaster/: amount.py  backup.py  config.py  default_config.yaml  exceptions.py  i18n.py  main.py  time_range.py  types.py
budget_forecaster/account/: __init__.py  account.py  account_analysis_renderer.py  account_analyzer.py  account_forecaster.py  account_interface.py  aggregated_account.py  persistent_account.py  repository_interface.py  sqlite_repository.py
budget_forecaster/bank_adapter/: bank_adapter.py  bank_adapter_factory.py
budget_forecaster/core/: amount.py  date_range.py  time_range.py  types.py
budget_forecaster/forecast/: forecast.py  forecast_actualizer.py  forecast_reader.py
budget_forecaster/infrastructure/: backup.py  config.py
budget_forecaster/operation_range/: budget.py  forecast_operation_range.py  historic_operation.py  historic_operation_factory.py  operation_link.py  operation_link_service.py  operation_matcher.py  operation_range.py  operations_categorizer.py  (+1 more)
docs/: README.md  backup.md  index.md
examples/: README.md  config.yaml  demo.db  generate_demo.py
scripts/: README_SWILE.md  build_swile_bookmarklet.py  swile_bookmarklet.html  swile_export.js
search/: search_index.json
tests/: test_account_analyzer.py  test_account_forecaster.py  test_amount.py  test_application_service.py  test_backup.py  test_budget.py  test_compute_match_score.py  test_exceptions.py  test_forecast_actualizer.py  test_forecast_service.py  test_i18n.py  test_import_service.py  test_link_modals.py  test_operation_link.py  test_operation_link_service.py  test_operation_matcher.py  test_operation_range.py  test_operation_service.py  test_operation_table.py  test_operations_categorizer.py  test_persistent_account.py  test_planned_operation.py  test_split_operation_modal.py  test_swile_bank_adapter.py  test_time_range.py  test_tui_messages.py
(+212 files in other folders)
