[metadata]
name = budget_forecaster
description = Budget analyzer with forecast feature
author = Corentin Corgié
author_email = 110186540+corentin-core@users.noreply.github.com
classifiers = Python Programming Language: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    openpyxl==3.1.5
    matplotlib==3.10.0
    xlrd==2.0.1
    pyyaml
    pandas
    xlsxwriter
    textual>=0.47.0

[options.extras_require]
dev =
    pytest
    pylint-pytest

[options.entry_points]
console_scripts =
    budget_forecaster = budget_forecaster.main:main
