[metadata]
name = budget_forecaster
version = 0.1.0
description = Budget analyzer with forecast feature
author = Corentin Corgié
author_email = 110186540+corentin-core@users.noreply.github.com
license = MIT
license_files = LICENSE
url = https://github.com/corentin-core/budget-forecaster
project_urls =
    Documentation = https://corentin-core.github.io/budget-forecaster/
    Repository = https://github.com/corentin-core/budget-forecaster
    Issues = https://github.com/corentin-core/budget-forecaster/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial

[options]
packages = find:
install_requires =
    openpyxl==3.1.5
    matplotlib==3.10.0
    xlrd==2.0.1
    pyyaml
    pandas
    xlsxwriter
    textual>=0.47.0

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    pytest-cov
    pylint-pytest

[options.entry_points]
console_scripts =
    budget_forecaster = budget_forecaster.main:main
